--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeList.html
@@ -5,7 +5,7 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>关于我们_${webname!}</title>
+<title>${nowType.typename}_${webname!}</title>
 <link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/common/common.css" rel="stylesheet" type="text/css" />
 <link href="${base.contextPath}/lib/index/css/associationSurvery/associationSurvery.css" rel="stylesheet" type="text/css" />
@@ -52,13 +52,13 @@
 								<span>${nowType.typename}</span>
 							</strong>
 						<div class="nr_box">
-							<div class="vF_deail_currentloc">
-							        <p>当前位置：&nbsp;${nowType.typename!} 列表页</p>
-							    </div>
-						
+							
 							<#if nowType.relatetype==1>
 								${content!}
 							<#elseif nowType.relatetype==2>
+								  <div class="vF_deail_currentloc">
+							        <p>当前位置：&nbsp;${nowType.typename!} 列表页</p>
+							      </div>
 								  <div class="br_box_list">
 					       			 <ul class="c_list_tat">
 									<#list rightList as rightList>   
