--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeListHistory.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeListHistory.html
@@ -5,7 +5,7 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>关于我们_${webname!}</title>
+<title>${nowType.typename}_${webname!}</title>
 <link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/common/common.css" rel="stylesheet" type="text/css" />
 <link href="${base.contextPath}/lib/index/css/associationSurvery/associationSurvery.css" rel="stylesheet" type="text/css" />
