--- a/shtyxh-manager/WebContent/lib/index/css/associationSurvery/associationSurvery.css
+++ b/shtyxh-manager/WebContent/lib/index/css/associationSurvery/associationSurvery.css
@@ -11,10 +11,11 @@ a{text-decoration:none}
 .left_box ul li.on a{ color:#FFF;}
 .left_box ul li:hover{ background:#005496; border-left:5px solid #ffab37};
 .left_box ul li:hover a{ color:#FFF; text-decoration:none;}
+.left_box ul li:hover a:hover{ color:#FFF; text-decoration:underline;}
 
 .right_box{ width:100%; height:auto; overflow:hidden;background: #f8f8f8;}
-.right_box strong.title{ display:block; height:47px; line-height:47px; border-bottom:1px solid #CCC;}
-.right_box strong.title span{ color:#666666; font-family:"Microsoft YaHei"; font-size:18px; display:inline-block;}
+.right_box strong.title{ display:block; height:47px;margin-left:10px; line-height:47px; border-bottom:1px solid #CCC;}
+.right_box strong.title span{ color:#666666; font-family:"Microsoft YaHei"; font-size:20px; display:inline-block;}
 .nr_box{ color:#666666; font-family:"Microsoft YaHei"; font-size:14px; line-height:24px; padding:10px 30px 0 10px;}
 .zg span{ color:#005496; font-weight:bold;}
 
