--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -104,7 +104,8 @@ body{background:#f0f0f0;}
 .top_nav_ls a{color:#fff;line-height:48px;font-size:16px;font-weight:bolder;text-decoration: none;}
 
 /*main*/
-.main{width:100%;background:#f0f0f0;}
+/* .main{width:100%;background:#f0f0f0;} */
+.main{width:100%;background:url("../img/background.png")}
 .main_container{width:1000px;margin:0 auto;}
 
 /*图片新闻和主题新闻*/
