--- a/shtyxh-manager/WebContent/WEB-INF/view/index/download/download.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/download/download.html
@@ -28,7 +28,7 @@
 			<div class="wz_block">
 			    <div class="vF_deail_currentloc">
 			        <p>当前位置：<a href="${base.contextPath}" title="首页" class="CurrChnlCls">首页</a>&nbsp;&raquo;&nbsp;
-			                <a href="#" title="资料下载" class="CurrChnlCls">资料下载</a>&nbsp;&raquo;&nbsp;</p>
+			                <a href="#" title="资料下载" class="CurrChnlCls">资料下载</a></p>
 			    </div>
 			
 			    <div class="vF_detail_relcontent mt13">
