--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
@@ -24,8 +24,8 @@ function dosearch(e){
 	alert(value2);
 	if((value1!=="" && value2=="")||(value1=="" && value2!==""))
 	{
-		if(value1==""){alert("请选择颁布日期的起始时间。");}
-		if(value2==""){alert("请选择颁布日期的结束时间。");}
+		if(value1==""){alert("请选择发布日期的起始时间。");}
+		if(value2==""){alert("请选择发布日期的结束时间。");}
 		return false;
 	}
 	if(CompareDate(value1,value2)){
