--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationPartyBuilding/associationPartyBuilding2.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationPartyBuilding/associationPartyBuilding2.html
@@ -5,7 +5,7 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>协会动态_${webname}</title>
+<title>党建活动_${webname}</title>
 <link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/channel.css"
 	rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
 
 	<div class="main">
 		<div class="main_container">
-		
+
 			<#if (newsThumbNailList?size>0)>
 				<div class="main_topic_block mt13">
 					<div class="picnews">
@@ -116,31 +116,31 @@
 				<div class="wz_block">
 
 					<#list typeList as typeList>
-					<div class="newslist_bl_nor">
-						<div class="newslist">
-							<div class="vF_t2">
-								<div class="vF_t2_r1">
-									<div class="vF_tab unit2">
-										<div class="vF_title_bar2">
-											<h2 class="ui_til4_tab_u current2 word5">
-												<a
-													href="${base.contextPath}/index/xhdt/typeList?typeid=${typeList.id}">${typeList.typename}</a>
-											</h2>
+						<div class="newslist_bl_nor">
+							<div class="newslist">
+								<div class="vF_t2">
+									<div class="vF_t2_r1">
+										<div class="vF_tab unit2">
+											<div class="vF_title_bar2">
+												<h2 class="ui_til4_tab_u current2 word5">
+													<a
+														href="${base.contextPath}/index/xhdt/typeList?typeid=${typeList.id}">${typeList.typename}</a>
+												</h2>
+											</div>
 										</div>
 									</div>
+	
+									<ul class="c_list mt10 mb10 tab-con split"
+										style="display: block">
+										<#list typeList.newsList as newsList>
+										<li><a
+											href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}"
+											target="_blank" title="${newsList.newstitle}">${newsList.newstitle}</a></li>
+										</#list>
+									</ul>
 								</div>
-
-								<ul class="c_list mt10 mb10 tab-con split"
-									style="display: block">
-									<#list typeList.newsList as newsList>
-									<li><a
-										href="${base.contextPath}/index/xhdt/newsDetail?id=${newsList.id}"
-										target="_blank" title="${newsList.newstitle}">${newsList.newstitle}</a></li>
-									</#list>
-								</ul>
 							</div>
 						</div>
-					</div>
 					</#list>
 				</div>
 			</div>
