--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeDetail.html
@@ -18,32 +18,8 @@
 
 	<div class="main">
 		<div class="main_container">
-			<div class="mainLeft_left_block mt13">
-
-				<!--OTsidebar-->
-				<div class="left_box ">
-					<strong>
-					<span>协会概况</span>
-					<samp></samp>
-					</strong>
-					
-					<ul>
-					<#list leftList as leftList>   
-					              <li id="cid${leftList.id}"><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList?typeid=${leftList.id}">${leftList.typename}</a></li>
-				    </#list>  
-					<script>
-						var changeclass=window.document.getElementById('cid${nowType.id}');
-						changeclass.className='on';
-					</script>
-					
-					</ul>
-					
-					
-					</div>
-					
-
-				</div>
-
+			
+				<#include "./include/associationLeftPage.html">
 				<div class="mainLeft_right_block mt13">
 					<div class="right_box">
 							<strong class="title">
@@ -51,7 +27,7 @@
 							</strong>
 						<div class="nr_box">
 								<div class="vF_deail_currentloc">
-							         <p>当前位置：<a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList?typeid=${nowType.id!}" title="" class="CurrChnlCls">${nowType.typename!}</a>
+							         <p>当前位置：<a href="${base.contextPath}/index/xhgk/typeList?typeid=${nowType.id!}" title="" class="CurrChnlCls">${nowType.typename!}</a>
 							          &nbsp;&raquo;&nbsp;${newsInfo.newstitle!}
        								 </p>
 							    </div>
