--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurveyTypeList.html
@@ -20,31 +20,7 @@
 
 	<div class="main">
 		<div class="main_container">
-			<div class="mainLeft_left_block mt13">
-
-				<!--OTsidebar-->
-				<div class="left_box ">
-					<strong>
-					<span>协会概况</span>
-					<samp></samp>
-					</strong>
-					
-					<ul>
-					<#list leftList as leftList>   
-					              <li id="cid${leftList.id}"><a href="${base.contextPath}/index/associationSurvey/associationSurveyTypeList?typeid=${leftList.id}">${leftList.typename}</a></li>
-				    </#list>  
-					<script>
-						var changeclass=window.document.getElementById('cid${nowType.id}');
-						changeclass.className='on';
-					</script>
-					
-					</ul>
-					
-					
-					</div>
-					
-
-				</div>
+				<#include "./include/associationLeftPage.html">
 
 				<div class="mainLeft_right_block mt13">
 					<div class="right_box">
@@ -62,7 +38,7 @@
 								  <div class="br_box_list">
 					       			 <ul class="c_list_tat">
 									<#list rightList as rightList>   
-						               <li><a href="${base.contextPath}/index/associationSurvey/associationSurveyDetail?typeid=${nowType.id}&newsid=${rightList.id}"  title="${rightList.newstitle}">${rightList.newsSimpleTitle!}</a>
+						               <li><a href="${base.contextPath}/index/xhgk/newsDetail?typeid=${nowType.id}&newsid=${rightList.id}"  title="${rightList.newstitle}">${rightList.newsSimpleTitle!}</a>
 						     				 <span> </span>
 									    </li> 
 						   			 </#list>   
@@ -86,7 +62,7 @@
 							        page: '<li class="page"><a href="javascript:;">{{page}}</a></li>',  
 							        onPageChange: function (num, type) {
 							        	if(type=="change"){
-							 	            var path ="associationSurveyTypeList?typeid=${nowType.id}&page="+num;
+							 	            var path ="typeList?typeid=${nowType.id}&page="+num;
 							 	            window.location.href=path;
 							        	}
 							        }
