--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offersDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offersDetail.html
@@ -24,7 +24,8 @@
 			<div class="vF_deail_currentloc mt10">
 		        <p>当前位置：
 		                <a href="${base.contextPath}/index/news" title="资讯中心" class="CurrChnlCls">资讯中心</a>&nbsp;&raquo;&nbsp;
-		                <a href="../" title="中标公告" class="CurrChnlCls">中标公告</a></p>
+		                <a href="${base.contextPath}/index/offers" title="中标公告" class="CurrChnlCls">园所招聘</a>&nbsp;&raquo;&nbsp;
+		                ${offersInfo.title!}</p>
 		    </div>
 
 			<div class="vF_deail_maincontent">
