--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
@@ -119,8 +119,9 @@ function uploadState(flag,message){
 <div class="main_left_block mt13">
 <div class="wz_block">
     <div class="vF_deail_currentloc">
-        <p>当前位置：<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">评估任务</a>
-          &nbsp;&raquo;&nbsp;<a href="${base.contextPath}/index/assessmentTypeList?typeid=${assessmentType.id}" title="${assessmentType.assessmentTypeName}" class="CurrChnlCls">${assessmentType.assessmentTypeName}</a>
+        <p>当前位置：<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">培训与鉴定</a>&nbsp;&raquo;&nbsp;
+        <a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">资质鉴定</a>&nbsp;&raquo;&nbsp;
+        <a href="${base.contextPath}/index/assessmentTypeList?typeid=${assessmentType.id}" title="${assessmentType.assessmentTypeName}" class="CurrChnlCls">${assessmentType.assessmentTypeName}</a>
            &nbsp;&raquo;&nbsp;${assessmentInfo.assessmentActivityName}
         </p>
     </div>
