--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentTypeList.html
@@ -23,7 +23,7 @@
 
 	<!--OTsidebar-->
 			<div class="main_right_cbl " style="margin-top:4px">
-	            	<h2 class="mt10 mb10">评估任务</h2>
+	            	<h2 class="mt10 mb10">资质鉴定</h2>
 	                <div class="vT-chs-section-content-con">
 	                <ul class="vT-chs-section-content-list mb10">
 	                	<#list typeList as typeList>
@@ -42,8 +42,9 @@
 
 				<div class="wz_block">
 				    <div class="vF_deail_currentloc">
-				        <p>当前位置：<a href="${base.contextPath}/index/assessmentTypeList" title="评估任务" class="CurrChnlCls">评估任务</a>
-				        &nbsp;&raquo;&nbsp;${assessmentType.assessmentTypeName!} 列表页</p>
+				           <p>当前位置：<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">培训与鉴定</a>&nbsp;&raquo;&nbsp;
+        					<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">资质鉴定</a>&nbsp;&raquo;&nbsp;
+				       		${assessmentType.assessmentTypeName!} 列表页</p>
 				    </div>
 				
 				    <div class="vF_detail_relcontent mt13">
