--- a/shtyxh-manager/WebContent/lib/index/css/channel.css
+++ b/shtyxh-manager/WebContent/lib/index/css/channel.css
@@ -111,7 +111,8 @@ body{background:#f0f0f0;}
 .top_nav_ls a{color:#fff;line-height:48px;font-size:16px;font-weight:bolder;text-decoration: none;}
 
 /*main*/
-.main{width:100%;background:#f0f0f0;}
+/* .main{width:100%;background:#f0f0f0;} */
+.main{width:100%;background:url("../img/background.png")}
 .main_container{width:1000px;margin:0 auto;}
 .main_notice_block{width:100%;background:#fff;float:left;height:51px;box-shadow:0px 0px 8px #ccc;}
 .main_notice{width:100%;height:51px;}
