--- a/shtyxh-manager/WebContent/lib/index/css/common/common.css
+++ b/shtyxh-manager/WebContent/lib/index/css/common/common.css
@@ -1,5 +1,6 @@
 /*main*/
-.main{width:100%;background:#f0f0f0;}
+/* .main{width:100%;background:#f0f0f0;} */
+.main{width:100%;float: left;background:url("../../img/background.png")}
 .main_container{width:1000px;margin:0 auto;}
 
 .mainLeft_left_block{width:292px;float:left;}
