--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -300,8 +300,43 @@ body{background:#f0f0f0;}
 .main_right_cbl_pxyjd dl dt{text-align:center;font-size:14px;color:#1180b8;font-weight:bold;background: url(../img/blue_arrow_left.gif) no-repeat;background-position: right  }
 .main_right_cbl_pxyjd dl dd{width:90px;float:right;padding-left:10px;line-height:30px;height:30px;background: url(../img/spr.gif) no-repeat;background-position: 0 2px;}
 .main_right_cbl_pxyjd dl dd p{font-size:14px;line-height:18px;color:#02396f;margin-top:18px;float:left;margin-left:10px}
+.main_right_cbl_pxyjd dl dd a{color: #333;text-decoration: none;}
+.main_right_cbl_pxyjd dl dd a:hover{text-decoration: underline;}
 
-
+/*搜索框*/
+.search-bd .form input {
+    width: 202px;
+    height: 48px;
+    line-height: 48px;
+    color: #222;
+/*     position: absolute; */
+/*     top: 1px; */
+/*     left: 0px; */
+    outline: none;
+    border: none;
+    padding: 4px 0 0px 20px;
+}
+.search-bd .form-group {
+    border: 2px solid #0082df;
+    position: relative;
+    height: 52px;
+    z-index: 3;
+}
+.search-bd .form .btn {
+    border: none;
+    background: #0082df;
+    color: #fff;
+    font-size: 18px;
+    height: 48px;
+    line-height: 48px;
+    overflow: hidden;
+/*     position: absolute; */
+/*     right: 0; */
+    text-align: center;
+/*     top: 0; */
+    width: 50px;
+    cursor: pointer;
+}
 
 
 /*-首页小轮播图start*/
