1.首页搜索框修改

--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamics.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamics.html
@@ -113,7 +113,7 @@
 			</#if>
 			<!--left newslist start-->
 			<div class="main_left_block mt13">
-				<div class="wz_block">
+				<div class="wz_block" style="background: #fff;">
 
 					<#list typeList as typeList>
 					<div class="newslist_bl_nor">
