--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -150,18 +150,25 @@
 				</div>
 				
 				<div class="main_right_block mt13">
-					<div class="search-bd">
-					  <form action="${base.contextPath}/index/news/search" id="search-form" class="form" method="GET">
-	                	<div class="form-group">
-		                    <input type="text" id="home-searchInput" name="searchparam" value="" class="form-control"
-		                           autocomplete="off"
-		                           placeholder="" />
-	                    <button type="submit" id="" name="" class="btn btn-primary">
-	                        <i class="iconfont icon-sousuo"></i>搜索
-	                    </button>
-	                    </div>
-	                    </form>
-                    </div>
+<!-- 					<div class="search-bd"> -->
+<!-- 					  <form action="${base.contextPath}/index/news/search" id="search-form" class="form" method="GET"> -->
+<!-- 	                	<div class="form-group"> -->
+<!-- 		                    <input type="text" id="home-searchInput" name="searchparam" value="" class="form-control" -->
+<!-- 		                           autocomplete="off" -->
+<!-- 		                           placeholder="" /> -->
+<!-- 	                    <button type="submit" id="" name="" class="btn btn-primary"> -->
+<!-- 	                        <i class="iconfont icon-sousuo"></i>搜索 -->
+<!-- 	                    </button> -->
+<!-- 	                    </div> -->
+<!-- 	                    </form> -->
+<!--                     </div> -->
+
+						 <div class="search-bd bar6">
+					        <form action="${base.contextPath}/index/news/search" id="search-form" class="form" method="GET">
+					            <input type="text" placeholder="请输入查询内容" name="searchparam">
+					            <button type="submit"></button>
+					        </form>
+					    </div>
 				</div>
 					
 				<div class="main_right_block mt13">
