--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
@@ -148,8 +148,7 @@ $(document).ready(function(){
 
 	<!--left newslist start-->
     <div class="main_left_block mt13">
-        <div class="wz_block">
-        
+        <div class="wz_block" style="background: #fff;">
         	<#list typeList as typeList>   
 			    <div class="newslist_bl_nor">
 	                <div class="newslist">
