--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentTypeList.html
@@ -5,12 +5,28 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>评估活动_${webname}</title>
+<title>资质鉴定_${webname}</title>
 <link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/detail.css" rel="stylesheet" type="text/css" />
 <link type="text/css" rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.min.css"/>
 <script language="javascript" src="${base.contextPath}/lib/jquery/jquery.min.js" ></script>
 <script language="javascript" src="${base.contextPath}/lib/jqPaginator/jqpaginator.min.js" ></script>
+
+<style type="text/css">
+	a{text-decoration:none}
+	.left_box{ width:100%; height:auto; overflow:hidden;float:left;background: #fff;box-shadow: 0px 0px 8px #ccc;}
+	.left_box strong{ display:block; width:100%; height:100px; background-color: #005496; color:#FFF;}
+	.left_box strong span{ display:block; font-family:"Microsoft YaHei"; font-size:22px; font-weight:normal; padding-top:34px; padding-left:102px;}
+	.left_box strong samp{ color:#b2dcff; font-family:"Microsoft YaHei"; font-size:12px; text-transform:uppercase; font-weight:normal;padding-left:102px;}
+	.left_box ul{ width:100%; background:#f7f8f9; padding-top:10px;}
+	.left_box ul li{ height:47px; line-height:47px;border-left:5px solid #f7f8f9;}
+	.left_box ul li a{ display:block; padding-left:27px; color:#666666; font-size:15px; font-family:"Microsoft YaHei";}
+	.left_box ul li.on{ background:#005496; border-left:5px solid #ffab37;}
+	.left_box ul li.on a{ color:#FFF;}
+	.left_box ul li:hover{ background:#005496; border-left:5px solid #ffab37};
+	.left_box ul li:hover a{ color:#FFF; text-decoration:none;}
+	.left_box ul li:hover a:hover{ color:#FFF; text-decoration:underline;}
+</style>
 </head>
 <body id="detail">
 <#include "../../include/navigation.html">
@@ -18,32 +34,32 @@
 <div class="main">
 <div class="main_container">
 
-<#if (typeList??)&&(typeList?size > 0)>
-<div class="mainLeft_left_block mt13">
+	<div class="mainLeft_left_block mt13">
+	<!--OTsidebar-->
+	<div class="left_box ">
+		<strong> <span>资质鉴定</span> 
+		</strong>
 
-	<!--OTsidebar-->
-			<div class="main_right_cbl " style="margin-top:4px">
-	            	<h2 class="mt10 mb10">资质鉴定</h2>
-	                <div class="vT-chs-section-content-con">
-	                <ul class="vT-chs-section-content-list mb10">
-	                	<#list typeList as typeList>
-	                		<li><a href="${base.contextPath}/index/assessmentTypeList?typeid=${typeList.id}" target="_blank" title="${typeList.assessmentTypeName}">${typeList.assessmentTypeName}</a></li>
-	                	</#list>
-					 </ul>
-	                </div>
-      		 </div>
-	<!--OTsidebar-->
-	
+		<ul>
+			<#list typeList as typeList>
+				<li  id="cid${typeList.id}"><a href="${base.contextPath}/index/assessmentTypeList?typeid=${typeList.id}" target="_blank" title="${typeList.assessmentTypeName}">${typeList.assessmentTypeName}</a></li>
+			</#list>
+			<script>
+						var changeclass=window.document.getElementById('cid${assessmentType.id}');
+						changeclass.className='on';
+			</script>
+
+		</ul>
+	</div>
 </div>
-</#if>
 
 	<#if assessmentType??>
     <div class="mainLeft_right_block mt13" >
 
 				<div class="wz_block">
 				    <div class="vF_deail_currentloc">
-				           <p>当前位置：<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">培训与鉴定</a>&nbsp;&raquo;&nbsp;
-        					<a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">资质鉴定</a>&nbsp;&raquo;&nbsp;
+				          <p>当前位置：<a href="${base.contextPath}/index/jdypx" title="" class="CurrChnlCls">培训与鉴定</a>&nbsp;&raquo;&nbsp;
+				          <a href="${base.contextPath}/index/assessmentTypeList" title="" class="CurrChnlCls">资质鉴定</a>&nbsp;&raquo;&nbsp;
 				       		${assessmentType.assessmentTypeName!} 列表页</p>
 				    </div>
 				
