--- a/shtyxh-manager/WebContent/lib/index/css/associationSurvery/associationSurvery.css
+++ b/shtyxh-manager/WebContent/lib/index/css/associationSurvery/associationSurvery.css
@@ -1,7 +1,7 @@
 a{text-decoration:none}
 /*协会简介*/
 .left_box{ width:100%; height:auto; overflow:hidden;float:left;background: #fff;box-shadow: 0px 0px 8px #ccc;}
-.left_box strong{ display:block; width:100%; height:100px; background:url(../img/about.png) no-repeat 40px 40px #005496; color:#FFF;}
+.left_box strong{ display:block; width:100%; height:100px;  background-color: #005496; color:#FFF;}
 .left_box strong span{ display:block; font-family:"Microsoft YaHei"; font-size:22px; font-weight:normal; padding-top:34px; padding-left:102px;}
 .left_box strong samp{ color:#b2dcff; font-family:"Microsoft YaHei"; font-size:12px; text-transform:uppercase; font-weight:normal;padding-left:102px;}
 .left_box ul{ width:100%; background:#f7f8f9; padding-top:10px;}
