--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -298,6 +298,8 @@ body{background:#f0f0f0;}
 .main_right_cbl_pxyjd .dldiv {width:269px;text-align:center;float:left;margin:10px;border-bottom:1px solid #1180b8; ;}
 .main_right_cbl_pxyjd dl {width:130px;text-align:center;float:left;}
 .main_right_cbl_pxyjd dl dt{text-align:center;font-size:14px;color:#1180b8;font-weight:bold;background: url(../img/blue_arrow_left.gif) no-repeat;background-position: right  }
+.main_right_cbl_pxyjd dl dt a{color: #1180b8;text-decoration: none; }
+.main_right_cbl_pxyjd dl dt a:hover{text-decoration: underline;}
 .main_right_cbl_pxyjd dl dd{width:90px;float:right;padding-left:10px;line-height:30px;height:30px;background: url(../img/spr.gif) no-repeat;background-position: 0 2px;}
 .main_right_cbl_pxyjd dl dd p{font-size:14px;line-height:18px;color:#02396f;margin-top:18px;float:left;margin-left:10px}
 .main_right_cbl_pxyjd dl dd a{color: #333;text-decoration: none;}
